deployment-apple.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo-deployment-apple
  labels:
    app: echo-apple
spec:
  replicas: 2
  selector:
    matchLabels:
      app: echo-apple
  template:
    metadata:
      labels:
        app: echo-apple
    spec:
      containers:
      - name: echo-apple
        image: k8s.gcr.io/echoserver:1.4
        ports:
          - containerPort: 8080
        volumeMounts:
          - name: config
            mountPath: "/config"
            readOnly: true
      volumes:
        # You set volumes at the Pod level, then mount them into containers inside that Pod
        - name: config
          configMap:
            # Provide the name of the ConfigMap you want to mount.
            name: echo-configmap-apple 
            # An array of keys from the ConfigMap to create as files
            items:
            - key: "game.properties"
              path: "game.properties"
            - key: "user-interface.properties"
              path: "user-interface.properties"
