service-apple.yaml
apiVersion: v1
kind: Service
metadata:
  name: echo-service-apple
spec:
  selector:
    app: echo-apple
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
