service-banana.yaml
apiVersion: v1
kind: Service
metadata:
  name: echo-service-banana
spec:
  selector:
    app: echo-banana
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
