ingress-apple.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echo-ingress-apple
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: apple.127.0.0.1.nip.io 
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: echo-service-apple
            port:
              number: 8080
